<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.kamikid.storage.view.StorageEditor">

    <LinearLayout
        android:id="@+id/editorActivityLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name" />

            <EditText
                android:id="@+id/editTextItemName"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="64"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price" />

            <EditText
                android:id="@+id/editTextItemPrice"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/money"
                android:inputType="numberDecimal"
                android:maxLength="64"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_amount" />

            <EditText
                android:id="@+id/editTextItemAmount"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxLength="64"
                android:maxLines="1"
                android:text="@string/init_amount"/>

            <Button
                android:id="@+id/buttonAmountAdd"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/add" />

            <Button
                android:id="@+id/buttonAmountMinus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_name" />

            <EditText
                android:id="@+id/editTextSupplierName"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="64"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_email" />

            <EditText
                android:id="@+id/editTextSupplierEmail"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="64"
                android:maxLines="1" />
            <ImageButton
                android:contentDescription="@string/email_order"
                android:id="@+id/imageButtonEmailOrder"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_email_black_48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supplier_phone" />

            <EditText
                android:id="@+id/editTextSupplierPhone"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="64"
                android:maxLines="1" />
            <ImageButton
                android:contentDescription="@string/order_by_phone"
                android:id="@+id/imageButtonPhoneOrder"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_phone_black_48dp" />
        </LinearLayout>
        <Button
            android:id="@+id/buttonUpdateAddStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_storage"/>
        <Button
            android:id="@+id/buttonDeleteStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_the_storage"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
